MOD: Tidy up coding

--- a/src/main/resources/templates/Auth/logout-success.html
+++ b/src/main/resources/templates/Auth/logout-success.html
@@ -10,6 +10,6 @@
 
 <div> Logout Success</div>
 
-<a href="../index.html" th:href="@{/AUTH/login-form.html}">Login Page</a>
+<a href="../index.html" th:href="@{/AUTH/login-form.do}">Login Page</a>
 </body>
 </html>
