--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
         <script src="/adminfunc/js/lib/jquery-3.3.1.min.js"></script>
         <script src="/adminfunc/js/lib/lodash.min.js"></script>
         <script src="/adminfunc/js/lib/moment.min.js"></script>
+        <script src="/adminfunc/js/lib/jquery-ui.min.js"></script>
 
         <script src="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid.min.js"></script>
 
