--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
 
-            <div style="border: 1px solid red; margin-top: 10px; height: 200px;">123</div>
+            <div style="border: 1px solid red; margin-top: 10px; height: 200px;"></div>
 
             <div style="padding-top: 10px;">
                 <div th:replace="fragments/surge-control-footer::surgeControlFooter" ></div>
