--- a/src/main/resources/templates/eServices2/SurgeControl/edit-surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/edit-surge-control.html
@@ -119,10 +119,29 @@
                             itemTemplate: function (value, item) {
                                 // let result = jsGrid.fields.control.prototype.itemTemplate.apply(this, arguments);
 
-                                var updateButton = jQuery('<button></button>>').addClass('SmallButtonStyle').data('rowItem', item).text('Update').on('click', function (e) {
+
+
+                                var updateButton = jQuery('<button></button>').addClass('SmallButtonStyle').data('rowItem', item).text('Update').on('click', function (e) {
                                     var rowItem = jQuery(this).data('rowItem');
                                     console.log(rowItem);
+
+                                    var form = jQuery('<form style="display: none;" method="POST" th:action="@{/surgeControlUpdated.do}"></form>');
+
+                                    jQuery.each(rowItem, function (key, value) {
+                                        console.log('key: ' + key + ' , value: ' + value);
+
+                                        var input = jQuery('<input name="' + key + '" value="' + value + '" />');
+                                        form.append(input);
+                                    });
+
+                                    jQuery(this).append(form);
+
+                                    form.submit();
+
+
                                 });
+
+                                // for
 
                                 return updateButton;
                             },
@@ -158,7 +177,7 @@
                     <span>Share Ticket Pool(Usage/Assigned): 3067/6000</span>
                 </div>
                 <div class="flex-item-1" style="min-width: 320px; ">
-                    <a th:href="@{/surgeControlUpdated.do}">
+                    <a th:href="@{/surgeControl.do}">
                         <input type="text" class="ButtonStyle edit-btn" th:value="${#messages.msg('umps.adminfunc.common.cancel')}" />
                     </a>
                 </div>
