--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -273,7 +273,7 @@
                                     <input type="radio" id="sub-tab-1-1" name="sub-tabs-1" checked="checked" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
                                     <label for="sub-tab-1-1">Enquiry</label>
                                     <input type="radio" id="sub-tab-1-2" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
-                                    <label for="sub-tab-1-2">Manatenance</label>
+                                    <label for="sub-tab-1-2">Maintenance</label>
                                     <input type="radio" id="sub-tab-1-3" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MANAGEMENT)" />
                                     <label for="sub-tab-1-3">Management</label>
                                     <div id="sub-content-1-1">
