--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,8 +17,28 @@
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-custom.css"/>
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css"/>
 
-        <script>
+        <script type="text/javascript" th:inline="javascript" th:if="${NAVBAR}">
+            /*<![CDATA[*/
 
+            $(function () {
+                var navBarList = [[${NAVBAR}]];
+                console.log('layout_nav');
+                console.log(navBarList);
+            });
+
+            /*]]>*/
+        </script>
+
+        <script type="text/javascript" th:inline="javascript" th:if="${ROOT}">
+            /*<![CDATA[*/
+
+            $(function () {
+                var root = [[${ROOT}]];
+                console.log('root');
+                console.log(root.child);
+            });
+
+            /*]]>*/
         </script>
 
     </head>
@@ -52,7 +72,7 @@
                     </div>
                 </div>
 
-                <div th:replace="fragments/navigation::nav(${ROOT})"></div>
+                <div th:replace="fragments/navigation::nav(${NAVBAR})"></div>
 
             </div>
 
