--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8"></meta>
     <title>Title</title>
@@ -73,9 +74,17 @@
                                         th:text="${message}">message ...</span>
                 </p>
 
-                <a th:href="@{/AUTH/login-form.do}">
-                    <input type="submit" value="Login Page" />
-                </a >
+                <a th:href="@{/landing.do}">
+                    <input type="button" value="Landing Page" />
+                </a>
+                <a th:href="@{/AUTH/login-form.do}"  >
+                    <input type="button" value="Login Page" />
+                </a>
+                <span  sec:authorize="isAuthenticated()">
+                    <a th:href="@{/AUTH/login-form.do}" >
+                        <input type="button" value="Login Page" />
+                    </a>
+                </span>
             </div>
         </div>
     </div>
