--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form.html
@@ -3,16 +3,33 @@
 <head>
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
-
-    <link rel="stylesheet" th:href="@{/css/audit-log.css}" />
 </head>
 <body>
 <div>
-
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <form th:action="@{/eservices2/auditLogSearch.do}" >
+        <script>
+            var UI_DATE_FORMAT = "DD/MM/YYYY";
+            jQuery(function(){
+                $("#auditLog").on("submit", function(e){
+                    if ($(".forStartDate").val() == '')
+                        $(".startDate").prop('disabled', true);
+                    else
+                        $(".startDate").prop('disabled', false);
+//                    $(".startDate").val(moment($(this).val(), UI_DATE_FORMAT).format(UI_DATE_FORMAT));
+                    $(".startDate").val($(".forStartDate").val());
+
+                    if ($(".forEndDate").val() == '')
+                        $(".endDate").prop('disabled', true);
+                    else
+                        $(".endDate").prop('disabled', false);
+
+                    $(".endDate").val($(".forEndDate").val());
+                })
+            })
+        </script>
+        <form id="auditLog" th:action="@{/eservices2/auditLogSearch.do}" method="post" >
         <div style="padding: 1.5em;">
             <div style=" margin-top: 1.5em; width: 100%; height: 200px; ">
                 <div id="auditLogSearch">
@@ -24,7 +41,8 @@
                     <div class="row">
                         <label>Function Name:</label>
                         <div  id="functionNameId" >
-                            <select name="auditLogDTO.funcId" >
+                            <select name="funcId" >
+                                <option></option>
                                 <option value="EC01">Application Fee Enquiry</option>
                                 <option value="EC02">System Holiday View</option>
                                 <option value="EC03">Schedule Job View</option>
@@ -35,21 +53,22 @@
                     <div class="row">
                         <label>User ID:</label>
                         <div  id="userId" >
-                            <input name="auditLogDTO.userId" />
+                            <input name="userId" />
                         </div>
                     </div>
 
                     <div class="row">
                         <label>Start Date:</label>
                         <div  id="startDate" >
-                            <input name="auditLogDTO.startDate" />
+                            <input class="forStartDate" />
+                            <input class="startDate" type="hidden" name="startDate" disabled="disabled"/>
                         </div>
                     </div>
-
                     <div class="row">
                         <label>End Date:</label>
                         <div  id="endDate" >
-                            <input name="auditLogDTO.endDate" />
+                            <input class="forEndDate" />
+                            <input class="endDate" type="hidden" name="endDate" disabled="disabled" />
                         </div>
                     </div>
 
