--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8"></meta>
     <title>e-Services Admin Function</title>
 
-    <link rel="stylesheet" th:href="@{/css/access-control.css}" />
-
     <script type="text/javascript" th:inline="javascript" th:if="${auditLogDTO}">
         /*<![CDATA[*/
 
@@ -14,21 +12,24 @@
 
             var auditLogList = [[${auditLogDTO.auditLogList}]];
 
+            let COLUMN_1 = "User ID";
+            let COLUMN_2 = "Function Name"
+            let COLUMN_3 = "[Action]Field Name"
+            let COLUMN_4 = "Input(Old/New)"
+            let COLUMN_5 = "Result"
+            let COLUMN_6 = "Date"
+            let COLUMN_7 = "Time"
+            
             if (isNotEmptyNullUndfined(auditLogList) && auditLogList.length) {
-                jQuery.each(auditLogList, function (index, object) {
-                    var fromDate = new Date(object['effectDateFrom']);
-                    var toDate = new Date(object['effectDateTo']);
-                    var fromDateFormatted =  moment().format('DD/MM/YYYY HH:mm:ss', fromDate);
-                    var toDateFormatted = moment().format('DD/MM/YYYY HH:mm:ss', toDate);
-
-                    var newObj = {
-                        'Effective Date': fromDateFormatted,
-                        'To': toDateFormatted,
-                        'Name': object['acName'],
-                        'White/Black': '',
-                        'Channel': object['channel'],
-                        'IP/Telephone Number': object['acIp']
-                    };
+                jQuery.each(auditLogList, function (index, auditLog) {
+                    var newObj = {};
+                    newObj[COLUMN_1] = auditLog.userId;
+                    newObj[COLUMN_2] = (auditLog.funcId?auditLog.funcId:"");
+                    newObj[COLUMN_3] = (auditLog.type?"[" + auditLog.type +"]":"") + (auditLog.fieldName?auditLog.fieldName:"")  ;
+                    newObj[COLUMN_4] = (auditLog.value?auditLog.value:(auditLog.valueOld?"("+auditLog.valueOld + "/"+ auditLog.valueNew+")":""));
+                    newObj[COLUMN_5] = (auditLog.searchResult?"Hit":"");
+                    newObj[COLUMN_6] = moment(auditLog.logDatetime).format('DD/MM/YYYY');
+                    newObj[COLUMN_7] = moment(auditLog.logDatetime).format('HH:mm:ss');
 
                     list.push(newObj);
                 });
@@ -49,35 +50,14 @@
                         data: list,
 
                         fields: [
-                            { name: 'Effective Date', type: 'text', width: 60, headerTemplate: commonHeader },
-                            { name: 'To', type: 'text', width: 40, headerTemplate: commonHeader },
-                            { name: 'Name', type: 'text', width: 50, headerTemplate: commonHeader },
-                            { name: 'White/Black', type: 'text', width: 80, headerTemplate: commonHeader },
-                            { name: 'Channel', type: 'text', width: 40, headerTemplate: commonHeader },
-                            { name: 'IP/Telephone Number', type: 'text', width: 80, headerTemplate: commonHeader },
-                            {
-                                type: 'control',
-                                headerTemplate: function () {
-                                    let title = '<span>Detail</span>';
-                                    return title;
-                                },
-                                itemTemplate: function (value, item) {
-                                    let result = jsGrid.fields.control.prototype.itemTemplate.apply(this, arguments);
+                            { name: COLUMN_1, type: 'text', width: 60, headerTemplate: commonHeader },
+                            { name: COLUMN_2, type: 'text', width: 60, headerTemplate: commonHeader },
+                            { name: COLUMN_3, type: 'text', width: 40, headerTemplate: commonHeader },
+                            { name: COLUMN_4, type: 'text', width: 50, headerTemplate: commonHeader },
+                            { name: COLUMN_5, type: 'text', width: 40, headerTemplate: commonHeader },
+                            { name: COLUMN_6, type: 'text', width: 40, headerTemplate: commonHeader },
+                            { name: COLUMN_7, type: 'text', width: 20, headerTemplate: commonHeader },
 
-                                    let str = '';
-
-                                    str += '<span>';
-                                    str += '<a th:href="@{/accessControlView.do}" class="RedLink">';
-                                    str += 'View';
-                                    str += '</a>';
-                                    str += '</span>';
-
-                                    // result = result.add(str);
-                                    result = str;
-
-                                    return result;
-                                }
-                            }
                         ]
 
                     }
