MOD: Review config and coding

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -53,7 +53,7 @@
                     <div></div>
                     <div class="flex-item-1 header-item-right">
                         <span>| userID:
-                            <b></b> |</span>
+                            <b th:text="${LOGIN_USER.displayName}"></b> |</span>
                         <span>Date:
                         <b id="todayDate"></b>
                     </span>
