FIX: navigation clickable FIX: main category 1px alignment MOD: Add demo checking in immd token logic MOD: rename routing path name

--- a/src/main/resources/templates/eServices2/AccessControl/access-control-global-success.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-global-success.html
@@ -97,7 +97,7 @@
             <div class="success-label" th:text="${#messages.msg('umps.adminfunc.accesscontrol.global.success.message')}"></div>
 
             <div style=" float: right; padding-top: 1em;">
-                <a th:href="@{/accessControl.do}">
+                <a th:href="@{/e-Services-2/maintenance/accessControl.do}">
                     <input type="text" th:value="${#messages.msg('umps.adminfunc.accesscontrol.backToAccessControl')}" class="ButtonStyle back-button" style="margin-right: 20px;" />
                 </a>
             </div>
