--- a/src/main/resources/templates/eServices2/AccessControl/access-control.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control.html
@@ -65,7 +65,7 @@
                                 let str = '';
 
                                 str += '<span>';
-                                str += '<a th:href="@{/accessControlView.do}" class="RedLink">';
+                                str += '<a th:href="@{/e-Services-2/maintenance/accessControl_View.do}" class="RedLink">';
                                 str += 'View';
                                 str += '</a>';
                                 str += '</span>';
@@ -102,12 +102,12 @@
                 </div>
                 <div style="flex: auto;"></div>
                 <div class="flex-item-1 SmallButtonStyle" style="margin: 0px 10px;">
-                    <a th:href="@{/accessControlGlobal.do}">
+                    <a th:href="@{/e-Services-2/maintenance/accessControl_Global.do}">
                         <span>Edit Global Parameters</span>
                     </a>
                 </div>
                 <div class="flex-item-1 SmallButtonStyle">
-                    <a th:href="@{/createAccessControl.do}">
+                    <a th:href="@{/e-Services-2/maintenance/accessControl_Create.do}">
                         <span>Create New White/Black List</span>
                     </a>
                 </div>
