--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="flex-item-1" style="min-width: 320px; ">
                     <input type="text" class="ButtonStyle edit-btn" value="Show Historial Data" />
-                    <a th:href="@{/editSurgeControl.do}">
+                    <a th:href="@{/e-Services-2/maintenance/surgeControl_Edit.do}">
                         <input type="text" class="ButtonStyle edit-btn" value="Edit Configuration" />
                     </a>
                 </div>
