--- a/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
@@ -66,7 +66,7 @@
             <div class="success-label">The item is saved.</div>
 
             <div style=" float: right; padding-top: 1em;">
-                <a th:href="@{/accessControl.do}">
+                <a th:href="@{/e-Services-2/maintenance/accessControl.do}">
                     <input type="text" value="Back to Access Control" class="ButtonStyle back-button" style="margin-right: 20px;" />
                 </a>
             </div>
