--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control-updated.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control-updated.html
@@ -108,7 +108,7 @@
                     <span style="color: red;" th:text="${#messages.msg('umps.adminfunc.surgecontrol.update.message')}"></span>
                 </div>
                 <div class="flex-item-1" style="min-width: 320px; ">
-                    <a th:href="@{/editSurgeControl.do}">
+                    <a th:href="@{/e-Services-2/maintenance/surgeControl_Edit.do}">
                         <input type="text" class="ButtonStyle edit-btn" style="width: 250px;" th:value="${#messages.msg('umps.adminfunc.common.backtoeditconfig')}" />
                     </a>
                 </div>
