--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -60,12 +60,14 @@
                     </div>
                 </div>
 
+
+
                 <div class="grid-container" style="border-radius: 20px 20px 0px 0px; ">
-                    <div class="main-menu">
+                    <div class="main-menu" >
                         <span style="margin-left: 30px;"></span>
 
-                        <span th:each="item, idx : ${ROOT.child}">
-                            <input type="radio" id="main-tab-" th:attrappend="id=${idx.index + 1}" name="main-tabs" checked="checked"  />
+                        <span th:each="item, idx : ${ROOT.child}" >
+                            <input type="radio" id="main-tab-" th:attrappend="id=${idx.index + 1}" name="main-tabs" th:checked="( ${NAVBAR.navigationList[0].label} == ${item.label} )"  />
                             <label for="main-tab-" th:attrappend="for=${idx.index + 1}" style="" url="${item.url}"
                                    th:text="${item.label}" th:onclick="'navigatePage('+${idx.index}+', true);'"  ></label>
                         </span>
