--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -58,176 +58,6 @@
 </head>
 
 <body>
-    <!--
-    <div th:if="${userDTO}">
-        <div class="flex-container">
-            <div class="flex-item-1 header-item-left">
-                <span>e-Services-2</span>
-            </div>
-            <div></div>
-            <div class="flex-item-1 header-item-right">
-                <span>| userID: <b th:text="${userDTO.loginId}"></b> |</span>
-                <span>Date:
-                    <b id="todayDate"></b>
-                </span>
-            </div>
-        </div>
-        <div class="grid-container " style="border-radius: 20px 20px 0px 0px; height: 400px;">
-            <div class="main-menu">
-
-                <input type="radio" id="main-tab-1" name="main-tabs" checked="checked"  />
-                <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
-                <input type="radio" id="main-tab-2" name="main-tabs"  />
-                <label for="main-tab-2">SMARTICS-2</label>
-                <input type="radio" id="main-tab-3" name="main-tabs"  />
-                <label for="main-tab-3">RM</label>
-                <div style="float: right; " >
-                    <a th:href="@{/AUTH/logout.do}" class="exit-btn">
-                        <input type="submit" id="exit-tab" name="" />
-                        <label for="exit-tab" >Exit</label>
-                    </a >
-                </div>
-
-
-                <div id="main-content-1">
-                    <div class="flex-container grid-nav-container">
-                        <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">e-Services-2 > <span id="eServices2SubCat"></span></span>
-                        </div>
-                    </div>
-                    <div class="content-container ">
-                        <div class="menu-container flex-container ">
-                            <div class="flex-item-1">&nbsp;</div>
-                            <div class="sub-menu">
-                                <input type="radio" id="sub-tab-1-1" name="sub-tabs-1" checked="checked" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
-                                <label for="sub-tab-1-1">Enquiry</label>
-                                <input type="radio" id="sub-tab-1-2" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
-                                <label for="sub-tab-1-2">Manatenance</label>
-                                <input type="radio" id="sub-tab-1-3" name="sub-tabs-1" onchange="onEServices2SubCatSelected(SUB_CAT_MENU.MANAGEMENT)" />
-                                <label for="sub-tab-1-3">Management</label>
-                                <div id="sub-content-1-1">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a th:href="@{/applicationFeeEnquiry.do}" class="func-bullet">Application Fee Enquiry</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">System Holiday View</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Schedule Job View</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Schedule Job View History</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div id="sub-content-1-2">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a class="func-bullet">Important Announcement</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Surge Control</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a th:href="@{/accessControl.do}" class="func-bullet">Access Control</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Audit Log</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Schedule Job</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div id="sub-content-1-3">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a class="func-bullet">Create Function Group</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Update Function Group</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Delete Function Group</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="flex-item-1">&nbsp;</div>
-                        </div>
-                    </div>
-                </div>
-                <div id="main-content-2">
-                    <div class="flex-container grid-nav-container">
-                        <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">SMARTICS-2 > <span id="smartics2SubCat"></span></span>
-                        </div>
-                    </div>
-                    <div class="content-container ">
-                        <div class="menu-container flex-container">
-                            <div class="flex-item-1">&nbsp;</div>
-                            <div class="sub-menu">
-                                <input type="radio" id="sub-tab-2-1" name="sub-tabs-2" checked="checked" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
-                                <label for="sub-tab-2-1">Enquiry</label>
-                                <input type="radio" id="sub-tab-2-2" name="sub-tabs-2" onchange="onSmartics2SubCatSelected(SUB_CAT_MENU.MAINTENANCE)" />
-                                <label for="sub-tab-2-2">Manatenance</label>
-
-                                <div id="sub-content-2-1">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a class="func-bullet">Appointment Booking Enquiry</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Online Submission Enquiry</a>
-                                        </li>
-                                        <li class="func-child">
-                                            <a class="func-bullet">Enquiry Code</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div id="sub-content-2-2">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a class="func-bullet">Delete Appointment</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="flex-item-1">&nbsp;</div>
-                        </div>
-                    </div>
-                </div>
-                <div id="main-content-3">
-                    <div class="flex-container grid-nav-container">
-                        <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">RM > <span id="rmSubCat"></span></span>
-                        </div>
-                    </div>
-                    <div class="content-container ">
-                        <div class="menu-container flex-container">
-                            <div class="flex-item-1">&nbsp;</div>
-                            <div class="sub-menu">
-                                <input type="radio" id="sub-tab-3-1" name="sub-tabs-3" checked="checked" onchange="onRmSubCatSelected(SUB_CAT_MENU.ENQUIRY)" />
-                                <label for="sub-tab-3-1">Enquiry</label>
-                                <div id="sub-content-3-1">
-                                    <ul class="func-parent">
-                                        <li class="func-child">
-                                            <a class="func-bullet">Online Submission Enquiry</a>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                            </div>
-                            <div class="flex-item-1">&nbsp;</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    -->
-
     <div>
 
         <div th:if="${userDTO}">
@@ -244,11 +74,11 @@
                     <a th:href="@{/noPermission.do}">No Permission</a>
                 </div>
             </div>
-            <div class="grid-container " style="border-radius: 20px 20px 0px 0px; height: 400px;">
+            <div class="grid-container " style="border-radius: 20px 20px 0 0; height: 400px;">
                 <div class="main-menu">
 
                     <input type="radio" id="main-tab-1" name="main-tabs"  />
-                    <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
+                    <label for="main-tab-1" style="margin-left: 30px; ">e-Services-2</label>
                     <input type="radio" id="main-tab-2" name="main-tabs"  />
                     <label for="main-tab-2">SMARTICS-2</label>
                     <input type="radio" id="main-tab-3" name="main-tabs"  />
@@ -280,10 +110,10 @@
                                     <div id="sub-content-1-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a th:href="@{/applicationFeeEnquiry.do}" class="func-bullet">Application Fee Enquiry</a>
+                                                <a th:href="@{/e-Services-2/enquiry/applicationFeeEnquiry.do}" class="func-bullet">Application Fee Enquiry</a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/systemHoliday.do}" class="func-bullet">System Holiday View</a>
+                                                <a th:href="@{/e-Services-2/enquiry/systemHoliday.do}" class="func-bullet">System Holiday View</a>
                                             </li>
                                             <li class="func-child">
                                                 <a class="func-bullet">Schedule Job View</a>
@@ -299,13 +129,13 @@
                                                 <a class="func-bullet">Important Announcement</a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/surgeControl.do}" class="func-bullet">Surge Control</a>
+                                                <a th:href="@{/e-Services-2/maintenance/surgeControl.do}" class="func-bullet">Surge Control</a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/accessControl.do}" class="func-bullet">Access Control</a>
+                                                <a th:href="@{/e-Services-2/maintenance/accessControl.do}" class="func-bullet">Access Control</a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/eservices2/auditLogSearchForm.do}" class="func-bullet">Audit Log</a>
+                                                <a th:href="@{/eservices2/auditLog_SearchForm.do}" class="func-bullet">Audit Log</a>
                                             </li>
                                             <li class="func-child">
                                                 <a class="func-bullet">Schedule Job</a>
