--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -62,14 +62,20 @@
 
 
 
-                <div class="grid-container" style="border-radius: 20px 20px 0px 0px; ">
+                <div class="grid-container" style="border-radius: 20px 20px 0 0; ">
                     <div class="main-menu" >
                         <span style="margin-left: 30px;"></span>
 
                         <span th:each="item, idx : ${ROOT.child}" >
                             <input type="radio" id="main-tab-" th:attrappend="id=${idx.index + 1}" name="main-tabs" th:checked="( ${NAVBAR.navigationList[0].label} == ${item.label} )"  />
-                            <label for="main-tab-" th:attrappend="for=${idx.index + 1}" style="" url="${item.url}"
+                            <label for="main-tab-" th:attrappend="for=${idx.index + 1}" class="nav-title nav-border-left" url="${item.url}"
                                    th:text="${item.label}" th:onclick="'navigatePage('+${idx.index}+', true);'"  ></label>
+                        </span>
+
+                        <span class="TopLabel nav-title nav-border-right" style=" ">
+                            <a th:href="@{/AUTH/logout.do}" class="exit-btn">
+                                <b>Exit</b>
+                            </a>
                         </span>
                     </div>
                 </div>
