--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -78,15 +78,15 @@
                 <div class="main-menu">
 
                     <input type="radio" id="main-tab-1" name="main-tabs"  />
-                    <label for="main-tab-1" style="margin-left: 30px; ">e-Services-2</label>
+                    <label for="main-tab-1" class="nav-title nav-border-left" style="margin-left: 30px; " th:text="${#messages.msg('umps.adminfunc.nav.eservices2')}"></label>
                     <input type="radio" id="main-tab-2" name="main-tabs"  />
-                    <label for="main-tab-2">SMARTICS-2</label>
+                    <label for="main-tab-2" class="nav-title nav-border-left" th:text="${#messages.msg('umps.adminfunc.nav.smartics2')}"></label>
                     <input type="radio" id="main-tab-3" name="main-tabs"  />
-                    <label for="main-tab-3">RM</label>
+                    <label for="main-tab-3" class="nav-title nav-border-left" th:text="${#messages.msg('umps.adminfunc.nav.rm')}"></label>
                     <div style="float: right; " >
-                        <a th:href="@{/AUTH/logout.do}" class="exit-btn">
+                        <a th:href="@{/AUTH/logout.do}" class="">
                             <input type="submit" id="exit-tab" name="" />
-                            <label for="exit-tab" >Exit</label>
+                            <label for="exit-tab" class="TopLabel nav-title nav-border-right" ><b th:text="${#messages.msg('umps.adminfunc.nav.exit')}"></b></label>
                         </a >
                     </div>
 
@@ -110,48 +110,48 @@
                                     <div id="sub-content-1-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a th:href="@{/e-Services-2/enquiry/applicationFeeEnquiry.do}" class="func-bullet">Application Fee Enquiry</a>
+                                                <a th:href="@{/e-Services-2/enquiry/applicationFeeEnquiry.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.applicationfeeenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/e-Services-2/enquiry/systemHoliday.do}" class="func-bullet">System Holiday View</a>
+                                                <a th:href="@{/e-Services-2/enquiry/systemHoliday.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.systemholidayview')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Schedule Job View</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobview')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Schedule Job View History</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobviewhistory')}"></a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div id="sub-content-1-2">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet">Important Announcement</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.importantannouncement')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/e-Services-2/maintenance/surgeControl.do}" class="func-bullet">Surge Control</a>
+                                                <a th:href="@{/e-Services-2/maintenance/surgeControl.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.surgecontrol')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/e-Services-2/maintenance/accessControl.do}" class="func-bullet">Access Control</a>
+                                                <a th:href="@{/e-Services-2/maintenance/accessControl.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.accesscontrol')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a th:href="@{/eservices2/auditLog_SearchForm.do}" class="func-bullet">Audit Log</a>
+                                                <a th:href="@{/eservices2/auditLog_SearchForm.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.auditlog')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Schedule Job</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.schedulejob')}"></a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div id="sub-content-1-3">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet">Create Function Group</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.createfuncgroup')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Update Function Group</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Delete Function Group</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.deletefuncgroup')}"></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -178,20 +178,20 @@
                                     <div id="sub-content-2-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet">Appointment Booking Enquiry</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.appointmentbookingenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Online Submission Enquiry</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.onlinesubmissionenquiry')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet">Enquiry Code</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.enquiry.enquirycode')}"></a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div id="sub-content-2-2">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet">Delete Appointment</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.smartics2.maintenance.deleteappointment')}"></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -215,7 +215,7 @@
                                     <div id="sub-content-3-1">
                                         <ul class="func-parent">
                                             <li class="func-child">
-                                                <a class="func-bullet">Online Submission Enquiry</a>
+                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.rm.enquiry.onlinesubmissionenquiry')}"></a>
                                             </li>
                                         </ul>
                                     </div>
